--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,12 @@
-version: "3.9"
+version: '3.8'
 
 services:
-  nuxt:
+  nuxt-app:
     build:
       context: .
       dockerfile: Dockerfile
-    expose:
-      - 3000
-    environment:
-      - HOST=0.0.0.0
-    command: npm run start
-
-  nginx:
-    image: nginx
     ports:
-      - "8080:80"
+      - "3000:80"  # Host:Container
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./static:/usr/share/nginx/html/static
-    depends_on:
-      - nuxt
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    restart: unless-stopped
