--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,17 +2,17 @@ server {
     listen 80;
     server_name localhost;
 
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    location /_nuxt {
-        alias /usr/share/nginx/html/_nuxt;
-        expires 7d;
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|otf)$ {
+        expires max;
+        log_not_found off;
     }
 
-    location /static {
-        alias /usr/share/nginx/html/static;
-        expires 30d;
-    }
+    error_page 404 /index.html;
 }
